# TextEditor

./: CMakeLists.txt  Instruction  Source.sln  TextEditor.sln
Debug/: TestEditor_Tests.exe.gta.testdurations  TestEditor_Tests.ilk
Source/: Source.cpp  Source.vcxproj
TestEditor_Tests/: TestEditor_Tests.vcxproj  file.txt  test.cpp  test_text.cpp  test_ttextlink.cpp
TestEditor_Tests/Debug/: TestEditor_Tests.exe.recipe  TestEditor_Tests.vcxproj.FileListAbsolute.txt
TestEditor_Tests/Debug/TestEditor_Tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  TestEditor_Tests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TextEditor/: Source.cpp  TextEditor.vcxproj  TextEditor.vcxproj.filters
TextEditor/Debug/: TextEditor.exe.recipe  TextEditor.ilk  vc142.idb
TextEditor/Debug/TextEditor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TextEditor/Headers/: TDataCom.h  TDataValue.h  TStack.h  TText.h  TTextLink.h
TextEditor/Source/: TText.cpp  TTextLink.cpp
TextEditor/x64/Debug/: vc142.idb
TextEditor/x64/Debug/TextEditor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TextEditor.lastbuildstate
